--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,14 +7,14 @@
   <meta charset="utf-8" />
   <title><%= title %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-  <%= javascript_include_tag 'application', data: { 'turbolinks-track' => true } %>
   <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
   <%= stylesheet_link_tag 'application', data: { 'turbolinks-track' => true } %>
+  <%= javascript_include_tag 'application', data: { 'turbolinks-track' => true } %>
   <%= csrf_meta_tags %>
 </head>
-<body id="c_<%= controller_name %>" data-action="<%= action_name %>" <%= raw 'class="logged_in"' if user_signed_in? %>>
+<body id="c_<%= controller_name %>" data-action="<%= action_name %>" <%= raw 'class="logged_in"' if user_signed_in? || controller_name == 'surveys' %>>
   <%= render 'shared/menu' %>
   <div id="loading_caption" class="alert" style="display: none;">
     <strong><%= t('label.loading') %></strong>
