Alivianando la vista =)

--- a/app/views/surveys/info.es.html.erb
+++ b/app/views/surveys/info.es.html.erb
@@ -3,7 +3,7 @@
     <%= image_tag asset_path('cetem.png') %>
   </div>
   <div class="span4">
-    <%= image_tag asset_path('tranvia.png') %>
+    <%= image_tag asset_path('tranvia.jpg') %>
   </div>
   <div class="span4 pull-right">
     <%= image_tag asset_path('utn-dri.png') %>
