--- a/app/views/surveys/_travel_line.html.erb
+++ b/app/views/surveys/_travel_line.html.erb
@@ -18,7 +18,11 @@
       <%= select_rise_time_with_interval(f) %>
     </div>
     <div class='span5'>
-      <%= f.label :travel_days %>
+      <% if f.object.errors[:travel_days].any? %>
+        <% travel_days_class = 'text-error' %>
+        <span class='text-error'><%= t('errors.messages.blank') %></span> <br />
+      <% end %>
+      <%= f.label :travel_days, class: travel_days_class %>
       <%= checkboxes_for_travel_days_in_survey(f)  %>
     </div>
     <div class="span1">
