--- a/app/views/surveys/info.es.html.erb
+++ b/app/views/surveys/info.es.html.erb
@@ -11,7 +11,7 @@
 </div>
 
 <div class='readonly-data'>
- <h1 class='text-center'>MetroTranvia de Mendoza</h1>
+ <h1 class='text-center'>MetroTranvía de Mendoza</h1>
   <div class="well">
     <h2 class='text-center'>La Universidad Tecnológica Nacional - Facultad Regional Mendoza, en conjunto con el Centro de Estudiantes Tecnológicos "Enrique Mosconi"</h2> 
     <h4>Convoca a todas las instituciones de Capital, ubicadas en las inmediaciones del recorrido del Metrotranvía, a participar de esta encuesta.</h4>
