--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -1,11 +1,20 @@
 <%= simple_form_for @survey, defaults: { input_html: { class: 'span10' } } do |f| %>
   <%= f.error_notification %>
+  <% if f.object.errors[:base].any? %>
+    <div class="alert alert-error">
+      <%= f.object.errors[:base].join(', ') %>
+    </div>
+  <% end %>
 
   <div class="form-inputs">
+
     <div class="well">
       <h2 class="text-center"><%= t('view.surveys.personal_info') %></h2>
-      <h5 class="text-center"><%= t('view.surveys.hi!') %></h5>
+      <h5 class="text-center">
+        <%= t('view.surveys.hi!') %> <span id="hi-title"></span>
+      </h5>
     </div>
+
     <div class='row-fluid'>
       <div class='span6'>
         <%= f.input :firstname %>
@@ -33,10 +42,13 @@
         <%= f.input :status_in_institution %>
       </div>
     </div>
+
     <div class="breadcrumb text-center">
       <h5><%= t('view.surveys.travel_info') %></h5>
     </div>
+
     <div id="travel-items">
+      <% @survey.travel_lines.build if @survey.travel_lines.size < 1 %>
       <%= f.simple_fields_for :travel_lines do |tl| %>
         <%= render partial: 'travel_line', locals: { f: tl } %>
       <% end %>
