Mini arreglos de menus

--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -13,6 +13,9 @@
             <%= show_menu_link(
               name: 'users', controllers: 'users', path: users_path
             ) if can?(:read, User) %>
+            <%= show_menu_link(
+              name: 'surveys', controllers: 'surveys', path: surveys_path
+            ) if can?(:read, Survey) %>
           </ul>
           <%= render partial: 'shared/nav_search' %>
           <ul class="nav pull-right">
@@ -33,6 +36,14 @@
             </li>
           </ul>
         </div>
+      <% else %>
+        <ul class="nav pull-right">
+          <li>
+            <%= link_to(
+              t('view.users.new_session'), new_user_session_path
+            ) unless controller_name == 'sessions' %>
+          </li>
+        </ul>
       <% end %>
     </div>
   </div>
