--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -10,9 +10,6 @@
 
     <div class="well">
       <h2 class="text-center"><%= t('view.surveys.personal_info') %></h2>
-      <h5 class="text-center">
-        <%= t('view.surveys.hi!') %> <span id="hi-title"></span>
-      </h5>
     </div>
 
     <div class='row-fluid'>
@@ -47,13 +44,35 @@
       <h5><%= t('view.surveys.travel_info') %></h5>
     </div>
 
-    <div id="travel-items">
-      <% @survey.travel_lines.build if @survey.travel_lines.size < 1 %>
-      <%= f.simple_fields_for :travel_lines do |tl| %>
-        <%= render partial: 'travel_line', locals: { f: tl } %>
-      <% end %>
+    <div id="travel-items" class="tabbable">
+      <% worked_days = t('view.surveys.worked_days') %>
+      <ul class="nav nav-tabs">
+        <li class="active">
+          <%= link_to worked_days, "##{worked_days.gsub(' ', '_')}", 
+            data: { toggle: 'tab' } %>
+        </li>
+        <% t('date.day_names').each_with_index do |day, i| %>
+          <% camel_day = day.camelize %>
 
-      <%= link_to_add_fields t('view.surveys.add_travel_line'), f, :travel_lines %>
+          <li>
+            <%= link_to camel_day, "##{camel_day}", data: { toggle: 'tab' } %>
+          </li>
+        <% end %>
+      </ul>
+
+      <div class="tab-content">
+        <% count = @survey.travel_lines.size %>
+        <% (8 - count).times { @survey.travel_lines.build } %>
+        <% i = 0 %>
+        <%= f.simple_fields_for :travel_lines do |tl| %>
+          <% id = return_id_for_travel_line(tl, i, worked_days) %>
+          <div class="tab-pane <%= 'active' if id == worked_days %>" 
+            id="<%= id.gsub(' ', '_') %>" >
+            <%= render partial: 'travel_line', locals: { f: tl, day: id } %>
+          </div>
+          <% i += 1 %>
+        <% end %>
+      </div>
     </div>
   </div>
 
