--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -39,7 +39,7 @@
           <td><%= show_station_by_key(tl.travel_from) %></td>
           <td><%= show_station_by_key(tl.travel_to) %></td>
           <td><%= tl.rise_time %></td>
-          <td><%= show_travel_days(tl.travel_days) %></td>
+          <td><%= tl.travel_days %></td>
         </tr>
       <% end %>
     </tbody>
