--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -13,27 +13,27 @@
     </div>
 
     <div class='row-fluid'>
-      <div class='span6'>
-        <%= f.input :firstname %>
+      <div class='span5'>
+        <%= f.input :firstname, input_html: { class: 'span12' } %>
       </div>
-      <div class='span6'>
-        <%= f.input :lastname %>
+      <div class='span5'>
+        <%= f.input :lastname, input_html: { class: 'span12' } %>
       </div>
     </div>
     <div class='row-fluid'>
-      <div class='span3'>
-        <%= f.input :identification %>
-      </div>
-      <div class='span3'>
-        <%= f.input :phone %>
+      <div class='span5'>
+        <%= f.input :phone, input_html: { class: 'span12' } %>
       </div>
       <div class='span5'>
         <%= f.input :email, input_html: { class: 'span12' } %>
       </div>
     </div>
     <div class='row-fluid'>
-      <div class='span6'>
+      <div class='span3'>
         <%= f.input :institution %>
+      </div>
+      <div class='span2'>
+        <%= f.input :identification %>
       </div>
       <div class='span6'>
         <%= f.input :status_in_institution %>
@@ -41,7 +41,8 @@
     </div>
 
     <div class="breadcrumb text-center">
-      <h5><%= t('view.surveys.travel_info') %></h5>
+      <h4><%= t('view.surveys.travel_info') %></h5>
+      <span><%= raw t('view.surveys.tabs_explain') %></span>
     </div>
 
     <div id="travel-items" class="tabbable">
