--- a/app/views/surveys/info.es.html.erb
+++ b/app/views/surveys/info.es.html.erb
@@ -1,11 +1,11 @@
 <div class='row-fluid'>
-  <div class="span4 pull-left">
+  <div class="span5 pull-left">
     <%= image_tag asset_path('cetem.png') %>
   </div>
-  <div class="span4">
+  <div class="span2">
     <%= image_tag asset_path('tranvia.jpg') %>
   </div>
-  <div class="span4 pull-right">
+  <div class="span5 pull-right">
     <%= image_tag asset_path('utn-dri.png') %>
   </div>
 </div>
@@ -13,15 +13,17 @@
 <div class='readonly-data'>
  <h1 class='text-center'>MetroTranvía de Mendoza</h1>
   <div class="well">
-    <h2 class='text-center'>La Universidad Tecnológica Nacional - Facultad Regional Mendoza, en conjunto con el Centro de Estudiantes Tecnológicos "Enrique Mosconi"</h2> 
-    <h4>Convoca a todas las instituciones de Capital, ubicadas en las inmediaciones del recorrido del Metrotranvía, a participar de esta encuesta.</h4>
+    <h2 class='text-center'>La Universidad Tecnológica Nacional <br /> Facultad Regional Mendoza</h2>
+    <h3 class='text-center'>En conjunto con el Centro de Estudiantes Tecnológicos "Enrique Mosconi" se presenta la propuesta de horarios nocturnos del metrotranvía.</h2> 
+    <h4 class='text-center'>El objetivo de la misma es realizar un relevamiento sobre las necesidades horarias de las personas que utilizan el servicio, a fin de solicitar a la Secretaría de Vías y Medios de Transporte de la Provincia de Mendoza la extensión del servicio del Metrotranvía en el horario nocturno.</h4>
 
-    <h4>El objetivo de la misma es realizar un relevamiento sobre las necesidades horarias de las personas que utilizan el servicio, a fin de solicitar a la Secretaría de Vías y Medios de Transporte de la Provincia de Mendoza la extensión del servicio del Metrotranvía en el horario nocturno.</h4>
+    <h4 class='text-center'>A pedido del Secretario de transporte, Dr. Diego Martínez Palau a efectos de acreditar cantidad de posibles pasajeros, que justifiquen un nuevo horario de recorrido del servicio, se presenta esta encuesta.</h4>
 
-    <h4>Solicitamos su difusión interna.</h4>
+    <h4 class='text-center'>Solicitamos cargar los datos con responsabilidad, los datos no serán divulgados ni utilizados malintencionadamente, su único fin es solo para la cuestión ya citada.</h4>
   </div>
 </div>
 
 <div class='form-actions text-center'>
+  <b>Al llenar la encuesta acepto haber leído detenidamente toda la información =></b>
   <%= link_to '<strong>Completar la Encuesta</strong>'.html_safe , new_survey_path, class: 'btn btn-primary btn-large' %>
 </div>
