Arreglo de imagenes

--- a/app/views/surveys/info.es.html.erb
+++ b/app/views/surveys/info.es.html.erb
@@ -1,12 +1,14 @@
-<div class='row-fluid'>
-  <div class="span5 pull-left">
-    <%= image_tag asset_path('cetem.png') %>
+<div class='row-fluid readonly-data'>
+  <div class="span1">
   </div>
-  <div class="span2">
+  <div class="span4 text-center">
+    <%= image_tag asset_path('cetem.jpg') %>
+  </div>
+  <div class="span2 text-center">
     <%= image_tag asset_path('tranvia.jpg') %>
   </div>
-  <div class="span5 pull-right">
-    <%= image_tag asset_path('utn-dri.png') %>
+  <div class="span4 text-center">
+    <%= image_tag asset_path('utn-dri.jpg') %>
   </div>
 </div>
 
