--- a/app/views/surveys/info.es.html.erb
+++ b/app/views/surveys/info.es.html.erb
@@ -21,7 +21,8 @@
 
     <h4 class='text-center'>A pedido del Secretario de transporte, Dr. Diego Martínez Palau a efectos de acreditar cantidad de posibles pasajeros, que justifiquen un nuevo horario de recorrido del servicio, se presenta esta encuesta.</h4>
 
-    <h4 class='text-center'>Solicitamos cargar los datos con responsabilidad, los datos no serán divulgados ni utilizados malintencionadamente, su único fin es solo para la cuestión ya citada.</h4>
+    <h4 class='text-center'>Solicitamos cargar los datos con responsabilidad a efectos de no distorsionar los resultados. Aclaramos que los datos no serán divulgados ni utilizados malintencionadamente. <br \>
+    El único fin es relevar la información requerida y elevar los resultados a la autoridad de transporte quién evaluará la viabilidad del pedido realizado.</h4>
   </div>
 </div>
 
