Cambiado DB de produccion a MYSQL

--- a/app/views/surveys/info.es.html.erb
+++ b/app/views/surveys/info.es.html.erb
@@ -16,7 +16,7 @@
  <h1 class='text-center'>MetroTranvía de Mendoza</h1>
   <div class="well">
     <h2 class='text-center'>La Universidad Tecnológica Nacional <br /> Facultad Regional Mendoza</h2>
-    <h3 class='text-center'>En conjunto con el Centro de Estudiantes Tecnológicos "Enrique Mosconi" se presenta la propuesta de horarios nocturnos del metrotranvía.</h2> 
+    <h3 class='text-center'>En conjunto con el Centro de Estudiantes Tecnológicos "Enrique Mosconi" presenta la propuesta de horarios nocturnos del metrotranvía.</h2> 
     <h4 class='text-center'>El objetivo de la misma es realizar un relevamiento sobre las necesidades horarias de las personas que utilizan el servicio, a fin de solicitar a la Secretaría de Vías y Medios de Transporte de la Provincia de Mendoza la extensión del servicio del Metrotranvía en el horario nocturno.</h4>
 
     <h4 class='text-center'>A pedido del Secretario de transporte, Dr. Diego Martínez Palau a efectos de acreditar cantidad de posibles pasajeros, que justifiquen un nuevo horario de recorrido del servicio, se presenta esta encuesta.</h4>
